--- a/templates/configure_course.html
+++ b/templates/configure_course.html
@@ -19,131 +19,133 @@
     {#        <a class="active" href="admin_home.html">Admin Home</a>#}
 </div>
 
-<div class="addCourseModal">
-    <div class="create-course" popover id="createCourse">
-        <div class="createNewCourseModalHeader">
-            <h2>Add new Course</h2>
-        </div>
-        <div class="modal-header" id="myModal">
-            <div class="modal-dialog">
-                <form action=" " method="post">
-                    {% csrf_token %}
-                    <input type="hidden" name="form_name" value="create_course">
-                    <div>
-                        <label class="form-label required">Course Name</label>
-                        <input type="text" class="form-control" name="course_name" required>
-                    </div>
-                    <div>
-                        <label class="form-label required">Instructor:</label>
-                        <select name="instructor">
-                            <option></option>
-                            {% for instructor in instructors %}
-                                <option>{{ instructor.first_name }} {{ instructor.last_name }}</option>
-                            {% endfor %}
-                        </select>
-                    </div>
-                    <input type="submit">
-                </form>
+<div class="alignCourseButtons">
+    <div class="addCourseModal">
+        <div class="create-course" popover id="createCourse">
+            <div class="createNewCourseModalHeader">
+                <h2>Add new Course</h2>
             </div>
-            <div class="modal-footer">
-                <button popovertarget="createCourse" popovertargetaction="hide">
-                    Cancel
-                </button>
-            </div>
-        </div>
-    </div>
-</div>
-<button popovertarget="createCourse">Add Course</button>
+            <div class="modal-header" id="myModal">
+                <div class="modal-dialog">
+                    <form action=" " method="post">
+                        {% csrf_token %}
+                        <input type="hidden" name="form_name" value="create_course">
+                        <div>
+                            <label class="form-label required">Course Name</label>
+                            <input type="text" class="form-control" name="course_name" required>
+                        </div>
+                        <div>
+                            <label class="form-label required">Instructor:</label>
+                            <select name="instructor">
+                                <option></option>
+                                {% for instructor in instructors %}
+                                    <option>{{ instructor.first_name }} {{ instructor.last_name }}</option>
+                                {% endfor %}
+                            </select>
+                        </div>
 
-<br>
-<div class="addSectionModal">
-    <div class="create-section" popover id="createSection">
-        <div class="createNewSectionModalHeader">
-            <h2>Add new Section</h2>
-        </div>
-        <div class="modal-header" id="myModal">
-            <div class="modal-dialog">
-                <form action=" " method="post">
-                    {% csrf_token %}
-                    <input type="hidden" name="form_name" value="create_section">
-                    <fieldset>
-                        <legend>Section Details</legend>
-                        <div>
-                            <label class="form-label required">Section Name (Must Include "Lecture", "Lab", or
-                                "Discussion"):</label>
-                            <input type="text" class="form-control" name="section_name" required>
-                        </div>
-                        <div>
-                            <label class="form-label required">Course:</label>
-                            <select name="section_course" required>
-                                <option></option>
-                                {% for i in courses %}
-                                    <option>{{ i.name }}</option>
-                                {% endfor %}
-                            </select>
-                        </div>
-                    </fieldset>
-                    <hr>
-                    <fieldset>
-                        <legend>Schedule</legend>
-                        <div>
-                            <label class="form-label required">Day(s):</label>
-                            <div class="day-checkboxes">
-                                {% for day, day_label in days %}
-                                    <div>
-                                        <input type="checkbox"
-                                               name="section_days"
-                                               value="{{ day }}"
-                                               {% if section.days and day in section.days %}checked{% endif %}>
-                                        <label>{{ day_label }}</label>
-                                    </div>
-                                {% endfor %}
-                            </div>
-                        </div>
-                        <div>
-                            <label class="form-label required">Time:</label>
-                            <input type="time" class="form-control" name="section_time"/>
-                        </div>
-                    </fieldset>
-                    <hr>
-                    <fieldset>
-                        <legend>Location & Users</legend>
-                        <div>
-                            <label class="form-label required">Location (if included, write the building and room
-                                number):</label>
-                            <input type="text" class="form-control" name="section_location">
-                        </div>
-                        <div>
-                            <label class="form-label required">Assign User (user must be in selected course if
-                                included):</label>
-                            <select name="section_user">
-                                <option></option>
-                                {% for user in users %}
-                                    {% if user.role == "Instructor" or user.role == "TA" %}
-                                        <option value="{{ user.id }}">{{ user.first_name }} {{ user.last_name }}
-                                            ({{ user.role }}) (
-                                            {% for course in user.courses.all %}
-                                                {{ course }},
-                                            {% endfor %}
-                                            )
-                                        </option>
-                                    {% endif %}
-                                {% endfor %}
-                            </select>
-                        </div>
-                    </fieldset>
-                    <input type="submit">
-                </form>
-            </div>
-            <div class="modal-footer">
-                <button popovertarget="createSection" popovertargetaction="hide">
-                    Cancel
-                </button>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <input type="submit" class="greenBtn">
+                    <button popovertarget="createCourse" popovertargetaction="hide" class="cancelButton">
+                        Cancel
+                    </button>
+                </div>
             </div>
         </div>
     </div>
+    <br/>
+    <button popovertarget="createCourse" class="addCourseAndSectionBtn">Add Course +</button>
+    <div class="addSectionModal">
+        <div class="create-section" popover id="createSection">
+            <div class="createNewSectionModalHeader">
+                <h2>Add new Section</h2>
+            </div>
+            <div class="modal-header" id="myModal">
+                <div class="modal-dialog">
+                    <form action=" " method="post">
+                        {% csrf_token %}
+                        <input type="hidden" name="form_name" value="create_section">
+                        <fieldset>
+                            <legend>Section Details</legend>
+                            <div>
+                                <label class="form-label required">Section Name (Must Include "Lecture", "Lab", or
+                                    "Discussion"):</label>
+                                <input type="text" class="form-control" name="section_name" required>
+                            </div>
+                            <div>
+                                <label class="form-label required">Course:</label>
+                                <select name="section_course" required>
+                                    <option></option>
+                                    {% for i in courses %}
+                                        <option>{{ i.name }}</option>
+                                    {% endfor %}
+                                </select>
+                            </div>
+                        </fieldset>
+                        <hr>
+                        <fieldset>
+                            <legend>Schedule</legend>
+                            <div>
+                                <label class="form-label required">Day(s):</label>
+                                <div class="day-checkboxes">
+                                    {% for day, day_label in days %}
+                                        <div>
+                                            <input type="checkbox"
+                                                   name="section_days"
+                                                   value="{{ day }}"
+                                                   {% if section.days and day in section.days %}checked{% endif %}>
+                                            <label>{{ day_label }}</label>
+                                        </div>
+                                    {% endfor %}
+                                </div>
+                            </div>
+                            <div>
+                                <label class="form-label required">Time:</label>
+                                <input type="time" class="form-control" name="section_time"/>
+                            </div>
+                        </fieldset>
+                        <hr>
+                        <fieldset>
+                            <legend>Location & Users</legend>
+                            <div>
+                                <label class="form-label required">Location (if included, write the building and room
+                                    number):</label>
+                                <input type="text" class="form-control" name="section_location">
+                            </div>
+                            <div>
+                                <label class="form-label required">Assign User (user must be in selected course if
+                                    included):</label>
+                                <select name="section_user">
+                                    <option></option>
+                                    {% for user in users %}
+                                        {% if user.role == "Instructor" or user.role == "TA" %}
+                                            <option value="{{ user.id }}">{{ user.first_name }} {{ user.last_name }}
+                                                ({{ user.role }}) (
+                                                {% for course in user.courses.all %}
+                                                    {{ course }},
+                                                {% endfor %}
+                                                )
+                                            </option>
+                                        {% endif %}
+                                    {% endfor %}
+                                </select>
+                            </div>
+                        </fieldset>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <input type="submit" class="greenBtn">
+                    <button popovertarget="createSection" popovertargetaction="hide" class="cancelButton">
+                        Cancel
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <button popovertarget="createSection" class="addCourseAndSectionBtn">Add Section +</button>
 </div>
-<button popovertarget="createSection">Add Section</button>
 <p style="text-align: center">{{ message }}</p>
 
 <div class="boxContainer">
@@ -185,8 +187,8 @@
                             </div>
                         </div>
                         <div class="modal-footer">
-                            <button type="submit" class="btn btn-primary">Save</button>
-                            <button type="button" class="btn btn-secondary"
+                            <button type="submit" class="greenBtn">Save</button>
+                            <button type="button" class="cancelButton"
                                     popovertarget="editCourseModal {{ course.id }}"
                                     popovertargetaction="hide">
                                 Cancel
@@ -195,9 +197,8 @@
                     </form>
                 </div>
             </div>
-            <button popovertarget="editCourseModal {{ course.id }}">Edit Course</button>
+            <button popovertarget="editCourseModal {{ course.id }}" class="editButton">Edit Course</button>
             <br/><br/>
-
             <b>Sections and Users</b><br/>
             {% for section in sections %}
                 {% if section.course.name == course.name %}
@@ -300,16 +301,17 @@
                                     </div>
                                 </fieldset>
                                 <div class="submitAndCancelButtons">
-                                    <input type="submit" class="btn btn-primary" value="Submit">
-                                    <button type="button" class="btn btn-secondary" popovertarget="editSectionModal {{ section.id }}"
-                                            popovertargetaction="hide">
+                                    <input type="submit" class="greenBtn" value="Submit">
+                                    <button type="button" class="cancelButton"
+                                            popovertarget="editSectionModal {{ section.id }}"
+                                            popovertargetaction="hide" >
                                         Cancel
                                     </button>
                                 </div>
                             </form>
                         </div>
                     </div>
-                    <button popovertarget="editSectionModal {{ section.id }}">Edit Section</button>
+                    <button popovertarget="editSectionModal {{ section.id }}" class="editButton">Edit Section</button>
                     <br/><br/>
                 {% endif %}
             {% endfor %}
