--- a/templates/course_directory.html
+++ b/templates/course_directory.html
@@ -26,7 +26,7 @@
             <input type="checkbox" name="filter" value="assigned" {% if filter_assigned %}checked{% endif %}>
             Show Only Assigned Courses/Labs
         </label>
-        <button type="submit">Apply Filter</button>
+        <button type="submit" class="applyFilter">Apply Filter</button>
     </form>
 </div>
 {##}
