--- a/templates/login.html
+++ b/templates/login.html
@@ -26,7 +26,7 @@
             flex-direction: column;
             align-items: center;
             width: 80%;
-            max-width: 600px;
+            max-width: 500px;
             background-color: #d9d9d9;
             border: 2px solid black;
             border-radius: 8px;
@@ -121,7 +121,7 @@
             <input type="password" id="password" name="password">
         </div>
         <div class="button-alignment">
-            <button type="submit" class="btn">Submit</button>
+            <button type="submit" class="btn">Sign In</button>
         </div>
         {{ message }}
     </form>
