--- a/templates/configure_user.html
+++ b/templates/configure_user.html
@@ -69,7 +69,7 @@
                         </div>
                         <div>
                             <label class="form-label required">Phone Number</label>
-                            <input type="number" class="form-control" name="phone_number" required>
+                            <input type="number" class="form-control" name="phone_number">
                         </div>
                         <div class="fullWidth">
                             <label class="form-label">Address</label>
@@ -83,6 +83,10 @@
                                     <option value="{{ i.0 }}">{{ i.1 }}</option>
                                 {% endfor %}
                             </select>
+                        </div>
+                        <div class="fullWidth">
+                            <label class="form-label">Skills:</label>
+                            <textarea class="form-control" name="skills" style="resize: none; height: 50px;"></textarea>
                         </div>
 
                         <!--
