--- a/templates/configure_user.html
+++ b/templates/configure_user.html
@@ -150,16 +150,18 @@
                         <div class="modal-dialog">
 
                             <div>
-                                <label class="form-label required">First Name</label>
-                                <input type="text" name="first_name" class="form-control" value="{{ user.first_name }}">
+                                <label class="form-label required" style="display: inline-block">First Name:</label>
+                                <input type="text" name="first_name" class="form-control" style="display: inline-block" value="{{ user.first_name }}">
                             </div>
                             <div>
-                                <label class="form-label required">Last Name</label>
-                                <input type="text" name="last_name" class="form-control" value="{{ user.last_name }}">
+                                <br/>
+                                <label class="form-label required" style="display: inline-block">Last Name:</label>
+                                <input type="text" name="last_name" class="form-control" style="display: inline-block" value="{{ user.last_name }}">
                             </div>
                             <div class="form-group">
-                                <label for="roleControlSelect1">Role</label>
-                                <select name="role" class="form-control" id="roleControlSelect1">
+                                <br/>
+                                <label for="roleControlSelect1" class="form-label required" style="display: inline-block">Role:</label>
+                                <select name="role" class="form-control" id="roleControlSelect1" style="display: inline-block">
                                     <option value="TA" {% if user.role == "TA" %}selected{% endif %}>TA</option>
                                     <option value="Instructor" {% if user.role == "Instructor" %}selected{% endif %}>
                                         Instructor
@@ -169,13 +171,25 @@
                                 </select>
                             </div>
                             <div>
-                                <label class="form-label required">Email</label>
-                                <input type="email" name="email" class="form-control" value="{{ user.email }}">
+                                <br/>
+                                <label class="form-label required" style="display: inline-block">Email:</label>
+                                <input type="email" name="email" class="form-control" style="display: inline-block" value="{{ user.email }}">
                             </div>
                             <div>
-                                <label class="form-label required">Phone Number</label>
-                                <input type="number" name="phone_number" class="form-control"
+                                <br/>
+                                <label class="form-label" style="display: inline-block">Phone Number:</label>
+                                <input type="number" name="phone_number" class="form-control" style="display: inline-block"
                                        value="{{ user.phone_number }}">
+                            </div>
+                            <div>
+                                <br/>
+                                <label class="form-label" style="display: inline-block">Address (Include Street Name and Number):</label>
+                                <input type="text" class="form-control" name="address" style="display: inline-block" value="{{ user.address }}">
+                            </div>
+                            <div>
+                                <br/>
+                                <label class="form-label">Skills:</label>
+                                <textarea class="form-control" name="skills" style="resize: none; height: 50px;" >{{ user.skills }}</textarea>
                             </div>
                         </div>
                         <div class="modal-footer">
