--- a/templates/edit_section_assignment.html
+++ b/templates/edit_section_assignment.html
@@ -2,25 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Profile Page | Scheduler</title>
+    <title>Edit Section Assignment | Scheduler</title>
     <link rel="stylesheet" href="/static/style.css">
 </head>
 <body style="background-color: rgb(217,217,217)">
-<h1>Profile Page</h1>
+<h1>Edit Section Assignment</h1>
 <a href="home.html">
     <img src="/static/Logo.jpeg" alt="TA Scheduler Logo" style="height: 10vh; width: auto;">
 </a>
 <div><a href="profile_page.html" style="margin-left: 95%">Profile</a></div>
 <div class="navbar">
     <a href="admin_home.html" style="padding: 9vh">Admin Home</a>
-    <a href="profile_page.html" class="active" style="padding: 9vh">Edit Account</a>
-    <a href="edit_section_assignment.html">Edit Section Assignment</a>
+    <a href="profile_page.html" style="padding: 9vh">Edit Account</a>
+    <a href="edit_section_assignment.html" class="active">Edit Section Assignment</a>
+
 {#    <a href="user_directory.html" style="padding: 9vh">User Directory</a>#}
 {#    <a href="course_directory.html" style="padding: 9vh">Course Directory</a>#}
     <a href="/" style="padding: 9vh">Log Out</a>
 </div>
-
-{% load custom_filters %}
 
 </body>
 </html>
