--- a/templates/configure_user.html
+++ b/templates/configure_user.html
@@ -86,7 +86,7 @@
                         </div>
                         <div class="fullWidth">
                             <label class="form-label">Skills:</label>
-                            <textarea class="form-control" name="skills" style="resize: none; height: 50px;"></textarea>
+                            <textarea class="form-control" name="skills" style="resize: none; height: 6.4vh;"></textarea>
                         </div>
 
                         <!--
@@ -189,7 +189,7 @@
                             <div>
                                 <br/>
                                 <label class="form-label">Skills:</label>
-                                <textarea class="form-control" name="skills" style="resize: none; height: 50px;" >{{ user.skills }}</textarea>
+                                <textarea class="form-control" name="skills" style="resize: none; height: 6.4vh;" >{{ user.skills }}</textarea>
                             </div>
                         </div>
                         <div class="modal-footer">
