saving old commit

--- a/templates/edit_section_assignment.html
+++ b/templates/edit_section_assignment.html
@@ -15,6 +15,7 @@
     <a href="admin_home.html" style="padding: 9vh">Admin Home</a>
     <a href="profile_page.html" style="padding: 9vh">Edit Account</a>
     <a href="edit_section_assignment.html" class="active">Edit Section Assignment</a>
+    <a href="profile_page.html">
 
 {#    <a href="user_directory.html" style="padding: 9vh">User Directory</a>#}
 {#    <a href="course_directory.html" style="padding: 9vh">Course Directory</a>#}
