Added editSectionAssignment to views

--- a/templates/edit_section_assignment.html
+++ b/templates/edit_section_assignment.html
@@ -12,7 +12,7 @@
 </a>
 <div><a href="profile_page.html" style="margin-left: 95%">Profile</a></div>
 <div class="navbar">
-    <a href="admin_home.html" style="padding: 9vh">Admin Home</a>
+{#    <a href="admin_home.html" style="padding: 9vh">Admin Home</a>#}
     <a href="profile_page.html" style="padding: 9vh">Edit Account</a>
     <a href="edit_section_assignment.html" class="active">Edit Section Assignment</a>
 
