--- a/templates/profile_page.html
+++ b/templates/profile_page.html
@@ -12,13 +12,14 @@
 </a>
 <div><a href="profile_page.html" style="margin-left: 95%">Profile</a></div>
 <div class="navbar">
-    <a href="admin_home.html" style="padding: 9vh">Admin Home</a>
+{#    <a href="admin_home.html" style="padding: 9vh">Admin Home</a>#}
     <a href="profile_page.html" class="active" style="padding: 9vh">Edit Account</a>
     <a href="edit_section_assignment.html">Edit Section Assignment</a>
 {#    <a href="user_directory.html" style="padding: 9vh">User Directory</a>#}
 {#    <a href="course_directory.html" style="padding: 9vh">Course Directory</a>#}
     <a href="/" style="padding: 9vh">Log Out</a>
 </div>
+<h2>Edit Account:</h2>
 
 {% load custom_filters %}
 
